ingress-jtq.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jtq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Controlador NGINX
spec:
  rules: # to handle all traffic coming into my app, we create 2 rules, one for FE and the other for BE
  - host: mi-aplicacion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
      - path: /fe
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
      - path: /be
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 8081
